demoapp-application-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /app1
        backend:
          service:
            name: flask-service-v1
            port:
              number: 8000
        pathType: Exact
      - path: /app2
        backend:
          service:
            name: flask-service-v2
            port:
              number: 8000
        pathType: Exact
