demoapp-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: demoapp1.southindia.cloudapp.azure.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: flask-service-v1
            port:
              number: 8000
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: flask-service-v2
            port:
              number: 8000
